@@ -123,6 +123,7 @@ logged_in_as=You are currently logged in as %1% (%2%).
 change_password=Change Password
 processing=Processing
 timed_out=Timed Out
+none=None
 error=Error
 no_search_results=No Results
 no_search_results_text=Unfortunately, your search did not return any results.
@@ -258,3 +259,7 @@ webapp.quote_rating_timed_out=The quote rating request timed out, possibly due t
 webapp.captcha_code_label=Type the text you see in this image:
 webapp.captcha_image_text=Captcha
 webapp.minimum_tag_usage_count_title=Minimum Quotes:
+webapp.top_quote_prefix=Top Quote:
+webapp.bottom_quote_prefix=Bottom Quote:
+webapp.latest_quote_prefix=Latest Quote:
+webapp.latest_unmoderated_quote_prefix=Latest Unmoderated Quote:
