@@ -115,6 +115,7 @@ logged_in_as=Je bent momenteel ingelogd als %1% (%2%).
 change_password=Wachtwoord wijzigen
 processing=Bezig met verwerken
 timed_out=Timeout
+none=Geen
 error=Fout
 no_search_results=Geen resultaten
 no_search_results_text=Geen enkel resultaat beantwoordde helaas aan je zoekopdracht.
@@ -258,3 +259,7 @@ webapp.quote_rating_timed_out=Je stemverzoek kon niet worden verwerkt omwille va
 webapp.captcha_code_label=Typ de tekst die je hier ziet:
 webapp.captcha_image_text=Captcha
 webapp.minimum_tag_usage_count_title=Minimaal aantal quotes:
+webapp.top_quote_prefix=Hoogst scorende quote:
+webapp.bottom_quote_prefix=Laagst scorende quote:
+webapp.latest_quote_prefix=Nieuwste quote:
+webapp.latest_unmoderated_quote_prefix=Nieuwste te controleren quote:
